# te_analysis

./: .gitignore  .gitignore.bak_pre_logignore  .gitmodules  LICENSE  Makefile  README.md  environment-r.yml  environment.yml  pixi.toml  pyproject.toml
config/: pipeline.defaults.yaml  references.catalog.yaml
configs/: paths.toml
docs/: architecture.md  backlog.md  legacy_repo_forensic_audit.md  metadata_schema.md  migration_blueprint_final.md  module_boundaries_phase1.md  progress_snapshot.md  repo_census_and_migration_audit.md  reproducibility.md  snakescale_contract.md  srr_resolution_design.md  srr_resolution_design_v2.md  te_analysis_f_purge_plus_t0_prompt.md  te_analysis_module_contracts_v1.md  te_analysis_sprint_plan_v1.md  te_analysis_top_level_design_v1.md  te_model_contract.md  vendor_sha_recommendation.md
references/: vendor_contracts.md
scripts/: align_fastq_paths.py  build_metadata_runs.py  build_upstream_pilot_package.py  enrich_metadata_srr.py  ingest_raw_symlinks.py  organism_alias_min.yaml  run_downstream_te.sh  run_handoff.sh  run_upstream.sh  run_upstream_pilot_dryrun.py  verify_t3_metadata.py
te_analysis/: __init__.py  cli.py  code_scffold.py
tests/: test_cli_extraction.py  test_config.py  test_config_loading.py  test_downstream_extraction.py  test_fixture_integrity.py  test_handoff_manifest.py  test_ingest_raw_symlinks.py  test_legacy_te_model_wrapper.py  test_legacy_te_stage2_positive_baseline.py  test_legacy_te_stage3_final_output_contract.py  test_local_mapping_discovery.py  test_metadata_runs.py  test_run_downstream.py  (+7 more)
(+150 files in other folders)
