[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "te_analysis"
version = "0.0.1"
description = "Quantifies translation efficiency (TE) across human, mouse, arabidopsis and yeast using CenikLab's CLR/ILR compositional regression on Ribo-seq + RNA-seq data, enabling cross-species analysis of conserved translational regulation."
authors = [
  { name = "ruixin xv" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["te_analysis"]
include = ["pyproject.toml", "te_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["te_analysis"]
force-sort-within-sections = true

